--- a/css/bootstrapnew.css
+++ b/css/bootstrapnew.css
@@ -44,9 +44,10 @@ html {
       -ms-text-size-adjust: 100%;
 }
 
-html, html a {
+body, body a {
     -webkit-font-smoothing: antialiased !important;
     -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizeLegibility;
     text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
 }
 
@@ -6959,7 +6960,7 @@ td.visible-print {
   display: inline-block;
   margin: 0;
   padding: 30px 30px;
-  background-color: rgba(44, 62, 80, 1);
+  background-color: rgba(44, 62, 80, .3);
 }
 @media (max-width: 560px) {
   .inner {
