--- a/css/bootstrapnew.css
+++ b/css/bootstrapnew.css
@@ -47,7 +47,7 @@ html {
 body, body a {
     -webkit-font-smoothing: antialiased !important;
     -moz-osx-font-smoothing: grayscale;
-    text-rendering: optimizeLegibility;
+    text-rendering: geometricPrecision;
     text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
 }
 
