--- a/css/brandonkwilliams.css
+++ b/css/brandonkwilliams.css
@@ -13,7 +13,7 @@
   border-bottom: 0px solid transparent;
 }
 .navbar-default {
-  background-color: #ffffff;
+  background-color: #f8f8f8;
   border-color: #ffffff;
 }
 .navbar-default .navbar-toggle:hover,
@@ -78,7 +78,7 @@
 /* Body Elements */
 .outer-full-page {
   display: table;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 .inner {
@@ -138,9 +138,52 @@ h1{
 .blue-text {
 	color: rgb(26, 29, 35);
 }
+.blue-text:hover {
+	color: rgba(26, 29, 35, 0.9);
+}
 .white-text {
 	color: white;
 }
 h2 {
 	font-weight: 300;
 }
+
+/* Work */
+.outer-third-page {
+  display: table;
+  width: 100vw;
+  height: 33vh;
+}
+.inner-third {
+  display: table-cell;
+  vertical-align: middle;
+  padding: 0px 0px 0px 0px;
+  color: transparent;
+}
+.inner-third:hover {
+  color: rgba(26, 29, 35, .6);
+}
+.chair-image {
+  background: url("../img/ChairPage.png") right 35% no-repeat;
+  background-size: cover;
+  overflow: hidden;
+}
+.shoe-image {
+  background: url("../img/ShoePage.png") center 15% no-repeat;
+  background-size: cover;
+  overflow: hidden;
+}
+.speaker-image {
+  background: url("../img/SpeakerPage.png") center 5%% no-repeat;
+  background-size: cover;
+  overflow: hidden;
+}
+
+
+
+
+
+
+
+
+
