--- a/css/brandonkwilliams.css
+++ b/css/brandonkwilliams.css
@@ -80,6 +80,7 @@
   display: table;
   width: 100%;
   height: 100vh;
+  border-bottom: 1px solid rgb(240, 240, 240);
 }
 .inner {
   display: table-cell;
