--- a/css/brandonkwilliams.css
+++ b/css/brandonkwilliams.css
@@ -50,13 +50,13 @@
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: rgb(26, 29, 35);
+  color: #42454e;
   background-color: transparent;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-  color: rgb(26, 29, 35);
+  color: #42454e;
   background-color: #ffffff;
 }
 .navbar-fixed-top,
@@ -74,7 +74,7 @@
 }
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus {
-  color: rgb(26, 29, 35);
+  color: #42454e;
   background-color: transparent;
 }
 .navbar-toggle {
@@ -117,6 +117,10 @@
 .inner-fit {
 	display: table-cell;
 	padding: 75px 0px 75px 0px;
+}
+.inner-fit-contact {
+	display: table-cell;
+	padding: 75px 0px 0px 0px;
 }
 .inner-full-page {
   display: table-cell;
@@ -176,8 +180,8 @@
 .inner-150 {
   display: table-cell;
   vertical-align: middle;
-  padding: 0px 0px 35px 0px;
-}
+  padding: 0px 0px 0px 0px;
+  }
 
 
 /* Work Pages */
@@ -188,7 +192,7 @@
 	color: white;
 }
 .font-blue {
-	color: rgb(26, 29, 35);
+	color: #42454e;
 }
 .font-gray {
 	color: #555555;
@@ -214,6 +218,10 @@ h3 {
 	font-size: 150%;
 	font-weight: 300;
 }
+h4 {
+	font-size: 100%;
+	font-weight: 300;
+}
 p {
 	font-size: 100%;
 	font-weight: 300;
@@ -221,7 +229,7 @@ p {
 
 /* Background Colors */
 .bg-blue {
-	background-color: rgb(26, 29, 35);
+	background-color: #42454e;
 }
 .bg-white {
 	background-color: white;
@@ -258,13 +266,21 @@ p {
 /* Other Elements */
 .outer-line-top {
 	width: 100%;
-	height: 30px;
+	height: 10px;
 }
 .outer-line-bottom {
 	width: 100%;
-	height: 40px;
+	height: 0px;
 }
 .inner-line {
+	width: 50px;
+	height: 5px;
+	background-color: rgb(240, 240, 240);
+	vertical-align: middle;
+	display: table;
+	margin: 0 auto;
+}
+.inner-line-dark {
 	width: 50px;
 	height: 5px;
 	background-color: rgb(220, 220, 220);
@@ -274,7 +290,7 @@ p {
 }
 .outer-small-line-top {
 	width: 100%;
-	height: 5px;
+	height: 0px;
 }
 .outer-small-line-bottom {
 	width: 100%;
@@ -289,9 +305,103 @@ p {
 	margin: 0;
 }
 
+/* Form Areas */
+.form-control {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 100%;
+  line-height: 1.428571429;
+  color: #555555;
+  vertical-align: middle;
+  background-color: #ffffff;
+  background-image: none;
+  border: 2px solid rgb(220, 220, 220);
+  border-radius: 2px;
+  -webkit-box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075);
+          box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075);
+  -webkit-transition: border-color ease-in-out .25s, box-shadow ease-in-out 0.15s;
+          transition: border-color ease-in-out .25s, box-shadow ease-in-out 0.15s;
+}
+.form-control:focus {
+  border-color: #42454e;
+  outline: 0;
+  -webkit-box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075), 0 0 0px rgba(102, 175, 233, 0.6);
+          box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075), 0 0 0px rgba(102, 175, 233, 0.6);
+  color: #555555;
+}
+.form-control:-moz-placeholder {
+  color: #999999;
+}
+.form-control::-moz-placeholder {
+  color: #999999;
+  opacity: 1;
+}
+.form-control:-ms-input-placeholder {
+  color: #999999;
+}
+.form-control::-webkit-input-placeholder {
+  color: #999999;
+}
+.form-control[disabled],
+.form-control[readonly],
+fieldset[disabled] .form-control {
+  cursor: not-allowed;
+  background-color: #eeeeee;
+}
+textarea.form-control {
+  height: auto;
+}
+.form-group {
+  margin-bottom: 15px;
+}
+
 /* Responsive Images */
 .img-responsive {
 	padding: 35px 0px 0px 0px;
 }
+.img-circle {
+	padding: 5px 10px;
+}
 
+/* Special Spacing */
+.padded-bottom {
+	padding-bottom: 15px;
+}
 
+/* Special Button */
+.btn {
+  display: inline-block;
+  padding: 6px 36px;
+  margin-bottom: 0;
+  font-size: 100%;
+  font-weight: 500;
+  line-height: 1.428571429;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  background-image: none;
+  border: 2px solid transparent;
+  border-radius: 2px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+       -o-user-select: none;
+          user-select: none;
+}
+.btn-new {
+	color: #42454e;
+	border-color: #42454e;
+	background-color: transparent;
+	-webkit-transition: all .2s ease;
+	-moz-transition: all .2s ease;
+	-ms-transition: all .2s ease;
+	-o-transitiona: all .2s ease;
+}
+.btn-new:hover {
+	background-color: #42454e;
+	color: #eeeeee;
+	text-shadow: none;
+}
