--- a/css/brandonkwilliams.css
+++ b/css/brandonkwilliams.css
@@ -10,6 +10,7 @@
   margin-right: auto;
   margin-left: auto;
   background-color: transparent;
+  max-width: 960px;
 }
 .container > .navbar-header,
 .container > .navbar-collapse {
@@ -120,7 +121,7 @@
 }
 .inner-fit-contact {
 	display: table-cell;
-	padding: 75px 0px 0px 0px;
+	padding: 10px 0px 0px 0px;
 }
 .inner-full-page {
   display: table-cell;
@@ -275,7 +276,7 @@ p {
 .inner-line {
 	width: 50px;
 	height: 5px;
-	background-color: rgb(240, 240, 240);
+	background-color: rgb(220, 220, 220);
 	vertical-align: middle;
 	display: table;
 	margin: 0 auto;
@@ -362,12 +363,15 @@ textarea.form-control {
 	padding: 35px 0px 0px 0px;
 }
 .img-circle {
-	padding: 5px 10px;
+	padding: 25px 5px;
 }
 
 /* Special Spacing */
 .padded-bottom {
 	padding-bottom: 15px;
+}
+.padded-top {
+	padding-top: 15px;
 }
 
 /* Special Button */
@@ -404,4 +408,40 @@ textarea.form-control {
 	background-color: #42454e;
 	color: #eeeeee;
 	text-shadow: none;
+}
+/* Media Queries */
+@media (min-width: 768px) {
+	.work {
+		height: 270px;
+		overflow: hidden;
+}
+}
+
+/* Images */
+.work-image1 {
+	width: 100%;
+	height: 270px;
+	background: url("../img/chairpage.png") center center no-repeat;*/
+  	background-size: cover;
+  	overflow: hidden;
+  	border: 2px solid #f8f8f8;
+  	border-radius: 2px;
+}
+.work-image2 {
+	width: 100%;
+	height: 270px;
+	background: url("../img/shoepage.png") center center no-repeat;*/
+  	background-size: cover;
+  	overflow: hidden;
+  	border: 2px solid #f8f8f8;
+  	border-radius: 2px;
+}
+.work-image3 {
+	width: 100%;
+	height: 270px;
+	background: url("../img/speakerpage.png") center center no-repeat;*/
+  	background-size: cover;
+  	overflow: hidden;
+  	border: 2px solid #f8f8f8;
+  	border-radius: 2px;
 }
