--- a/css/brandonkwilliams.css
+++ b/css/brandonkwilliams.css
@@ -410,36 +410,28 @@ textarea.form-control {
 	text-shadow: none;
 }
 /* Media Queries */
-@media (min-width: 768px) {
-	.work {
-		height: 270px;
-		overflow: hidden;
-}
-}
+
 
 /* Images */
 .work-image1 {
-	width: 100%;
 	height: 270px;
-	background: url("../img/chairpage.png") center center no-repeat;*/
+	background: url("../img/chairpage.png") center center no-repeat;
   	background-size: cover;
   	overflow: hidden;
   	border: 2px solid #f8f8f8;
   	border-radius: 2px;
 }
 .work-image2 {
-	width: 100%;
 	height: 270px;
-	background: url("../img/shoepage.png") center center no-repeat;*/
+	background: url("../img/shoepage.png") center center no-repeat;
   	background-size: cover;
   	overflow: hidden;
   	border: 2px solid #f8f8f8;
   	border-radius: 2px;
 }
 .work-image3 {
-	width: 100%;
 	height: 270px;
-	background: url("../img/speakerpage.png") center center no-repeat;*/
+	background: url("../img/speakerpage.png") center center no-repeat;
   	background-size: cover;
   	overflow: hidden;
   	border: 2px solid #f8f8f8;
