--- a/css/brandonkwilliams.css
+++ b/css/brandonkwilliams.css
@@ -267,7 +267,7 @@ p {
 /* Other Elements */
 .outer-line-top {
 	width: 100%;
-	height: 10px;
+	height: 5px;
 }
 .outer-line-bottom {
 	width: 100%;
@@ -373,6 +373,12 @@ textarea.form-control {
 .padded-top {
 	padding-top: 15px;
 }
+.pad-space {
+	height: 25px;
+	width: 100%;
+	background-color: transparent;
+
+}
 
 /* Special Button */
 .btn {
@@ -437,3 +443,39 @@ textarea.form-control {
   	border: 2px solid #f8f8f8;
   	border-radius: 2px;
 }
+
+/* Links
+.link {
+	height: 100%;
+	width: 100%;
+	background-color: transparent;
+	opacity: 0;
+	color: transparent;
+	vertical-align: top;
+	text-align: right;
+	font-size: 150%;
+	font-weight: 300;
+	-webkit-transition: all .2s ease;
+	-moz-transition: all .2s ease;
+	-ms-transition: all .2s ease;
+	-o-transitiona: all .2s ease;
+}
+.link:hover {
+	background-color: #42454e;
+	opacity: .9;
+	color: white;
+}
+a {
+	color: white;
+	text-decoration: none;
+	padding: 10px 10px 250px 250px;
+	-webkit-transition: all .2s ease;
+	-moz-transition: all .2s ease;
+	-ms-transition: all .2s ease;
+	-o-transitiona: all .2s ease;
+}
+a:hover {
+	color: #eeeeee;
+	text-decoration: none;
+}
+*/
