--- a/css/brandonkwilliams.css
+++ b/css/brandonkwilliams.css
@@ -399,7 +399,10 @@ textarea.form-control {
   cursor: pointer;
   background-image: none;
   border: 2px solid transparent;
-  border-radius: 2px;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-radius-bottom-left: 2px;
+  border-radius-bottom-left: 2px;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
