--- a/css/brandonkwilliams.css
+++ b/css/brandonkwilliams.css
@@ -36,6 +36,7 @@
   margin-bottom: 20px;
   padding-top: 2.5px;
   border-bottom: 0px solid transparent;
+  box-shadow: none;
 }
 .navbar-default {
   background-color: #f8f8f8;
@@ -117,16 +118,11 @@
 }
 .inner-fit {
 	display: table-cell;
-	padding: 75px 0px 75px 0px;
+	padding: 75px 0px 105px 0px;
 }
 .inner-fit-contact {
 	display: table-cell;
 	padding: 10px 0px 0px 0px;
-}
-.inner-full-page {
-  display: table-cell;
-  text-align: left;
-  padding: 0px 0px 0px 0px;
 }
 .outer-third-page {
   display: table;
@@ -194,6 +190,9 @@
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
 	-webkit-font-smoothing: antialiased !important;
 }
+.font-orange {
+  color: #db9838;
+}
 .font-gray {
 	color: #777777;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
@@ -203,7 +202,11 @@
 	color: white;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
 	-webkit-font-smoothing: antialiased !important;
-
+}
+.font-green {
+  color: #26936c;
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+  -webkit-font-smoothing: antialiased !important;
 }
 .font-light {
 	font-weight: 100;
@@ -247,6 +250,9 @@ p {
 }
 .bg-dark-gray {
 	background-color: #777777;
+}
+.bg-green {
+  background-color: #26936c
 }
 
 /* Vertical Alignment */
@@ -326,14 +332,14 @@ p {
   background-color: #ffffff;
   background-image: none;
   border: 2px solid rgb(220, 220, 220);
-  border-radius: 2px;
+  border-radius: 0px;
   -webkit-box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075);
           box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075);
   -webkit-transition: border-color ease-in-out .25s, box-shadow ease-in-out 0.15s;
           transition: border-color ease-in-out .25s, box-shadow ease-in-out 0.15s;
 }
 .form-control:focus {
-  border-color: #42454e;
+  border-color: rgb(26, 29, 35);
   outline: 0;
   -webkit-box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075), 0 0 0px rgba(102, 175, 233, 0.6);
           box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075), 0 0 0px rgba(102, 175, 233, 0.6);
@@ -388,7 +394,8 @@ textarea.form-control {
 /* Special Button */
 .btn {
   display: inline-block;
-  padding: 6px 36px;
+  padding: 6px 0px;
+  width: 250px;
   margin-bottom: 0;
   font-size: 100%;
   font-weight: 500;
@@ -399,10 +406,7 @@ textarea.form-control {
   cursor: pointer;
   background-image: none;
   border: 2px solid transparent;
-  border-top-left-radius: 0px;
-  border-top-right-radius: 0px;
-  border-radius-bottom-left: 2px;
-  border-radius-bottom-left: 2px;
+  border-radius: 0px;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -412,7 +416,7 @@ textarea.form-control {
 .btn-new {
 	color: #42454e;
 	border-color: #42454e;
-	background-color: transparent;
+	background-color: white;
 	-webkit-transition: all .2s ease;
 	-moz-transition: all .2s ease;
 	-ms-transition: all .2s ease;
@@ -530,4 +534,7 @@ a:hover {
 	font-size: 100%;
 	font-weight: 300;
 }
+body {
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
+  -webkit-font-smoothing: antialiased !important;
 }
