--- a/css/interactiveform.css
+++ b/css/interactiveform.css
@@ -598,4 +598,5 @@ a:hover {
   -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
           box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
   background-clip: padding-box;
+  -webkit-overflow-scrolling: touch;
 }
