--- a/css/interactiveform.css
+++ b/css/interactiveform.css
@@ -588,6 +588,9 @@ a:hover {
 .top-padding{
   padding-top: 25px;
 }
+.modal {
+  -webkit-overflow-scrolling: touch;
+}
 .modal-content {
   position: relative;
   background-color: #ffffff;
@@ -598,5 +601,4 @@ a:hover {
   -webkit-box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
           box-shadow: 0 3px 9px rgba(0, 0, 0, 0.5);
   background-clip: padding-box;
-  -webkit-overflow-scrolling: touch;
 }
