--- a/css/form.css
+++ b/css/form.css
@@ -1,9 +1,10 @@
 .wufoo {
-    font-family: "Lucida Grande", "Lucida Sans Unicode",  Tahoma,  sans-serif;
+    font-family: inherit;
+    font-weight: 300;
     letter-spacing: .01em;
 }
 .wufoo li {
-    width: 64%}
+    width: 100%}
 .info {
     display: inline-block;
     clear: both;
@@ -195,18 +196,24 @@ form li div label .currently {
     display: none;
 }
 input.text, input.search, input.file, textarea.textarea, select.select {
-    font-family: "Lucida Grande",  Tahoma,  Arial,  sans-serif;
+    font-family: inherit;
     font-size: 100%;
-    color: #333;
+    color: #42454e;
     margin: 0;
-    padding: 2px 0;
+    padding: 2px 2px;
+    border: 2px solid rgb(220, 220, 220);
+    border-radius: 0px;
+    -webkit-box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075);
+            box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075);
+    -webkit-transition: border-color ease-in-out .25s, box-shadow ease-in-out 0.15s;
+            transition: border-color ease-in-out .25s, box-shadow ease-in-out 0.15s;
 }
-input.text, input.search, textarea.textarea {
-    border-top: 1px solid #7c7c7c;
-    border-left: 1px solid #c3c3c3;
-    border-right: 1px solid #c3c3c3;
-    border-bottom: 1px solid #ddd;
-    background: #fff url(../images/fieldbg.gif) repeat-x top;
+input.text:focus, input.search:focus, textarea.textarea:focus{
+  border-color: #26936c;
+  outline: 0;
+  -webkit-box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075), 0 0 0px rgba(102, 175, 233, 0.6);
+          box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075), 0 0 0px rgba(102, 175, 233, 0.6);
+  color: #42454e;
 }
 input.nospin::-webkit-inner-spin-button, input.nospin::-webkit-outer-spin-button {
     -webkit-appearance: none;
