--- a/css/form.css
+++ b/css/form.css
@@ -209,7 +209,7 @@ input.text, input.search, input.file, textarea.textarea, select.select {
             transition: border-color ease-in-out .25s, box-shadow ease-in-out 0.15s;
 }
 input.text:focus, input.search:focus, textarea.textarea:focus{
-  border-color: #26936c;
+  border-color: #42454e;
   outline: 0;
   -webkit-box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075), 0 0 0px rgba(102, 175, 233, 0.6);
           box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075), 0 0 0px rgba(102, 175, 233, 0.6);
