--- a/css/brandonkwilliams.css
+++ b/css/brandonkwilliams.css
@@ -123,6 +123,9 @@
   display: table-cell;
   padding: 75px 0px 55px 0px;
 }
+.inner-fit-reflection {
+  display: table-cell;
+  padding: 35px 0px 45px 0px;
 }
 .inner-fit-contact {
 	display: table-cell;
@@ -234,8 +237,8 @@ h3 {
 	font-weight: 300;
 }
 h4 {
-	font-size: 100%;
-	font-weight: 300;
+	font-size: 125%;
+	font-weight: 500;
 }
 p {
 	font-size: 100%;
@@ -394,6 +397,12 @@ textarea.form-control {
 }
 .padded-bottom-25 {
 	padding-bottom: 25px;
+}
+.padded-bottom-35 {
+  padding-bottom: 35px;
+}
+.pad-box {
+  padding-left: 200px;
 }
 
 /* Special Button */
@@ -560,7 +569,7 @@ a:hover {
 	font-weight: 300;
 }
 	h4 {
-	font-size: 100%;
+	font-size: 115%;
 	font-weight: 300;
 }
 	p {
@@ -574,4 +583,29 @@ a:hover {
   .btn-blue {
   width: 100%;
 }
+}
+/* Video */
+.video-container {     
+  position: relative;     
+  padding-bottom: 56.25%;     
+  padding-top: 30px; 
+  height: 0; 
+  overflow: hidden; 
+}   
+.video-container iframe, 
+.video-container object, 
+.video-container embed {     
+  position: absolute;     
+  top: 0;     
+  left: 0;     
+  width: 100%;     
+  height: 100%; 
+}
+.title {
+  font-size: 400%;
+}
+@media (max-width: 767px) {
+  .title {
+    font-size: 350%;
+  }
 }
