--- a/css/brandonkwilliams.css
+++ b/css/brandonkwilliams.css
@@ -108,7 +108,8 @@
 }
 .inner-full-page {
   display: table-cell;
-  padding: 55px 0px 0px 0px;
+  padding: 0px 0px 0px 0px;
+  margin-top: -100px;
 }
 .outer-fit {
 	display: table;
@@ -193,7 +194,7 @@
 
 /* Font Choices */
 .font-blue {
-	color: #42454e;
+	color: #2c3e50;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
 	-webkit-font-smoothing: antialiased !important;
 }
@@ -206,12 +207,12 @@
 	-webkit-font-smoothing: antialiased !important;
 }
 .font-white {
-	color: white;
+	color: #ffffff;
 	text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
 	-webkit-font-smoothing: antialiased !important;
 }
 .font-green {
-  color: #26936c;
+  color: rgb(48, 198, 81);
   text-shadow: 1px 1px 1px rgba(0,0,0,0.004);
   -webkit-font-smoothing: antialiased !important;
 }
@@ -224,9 +225,12 @@
 .font-bold {
 	font-weight: 500;
 }
+
 h1 {
-	font-size: 300%;
+  font-size: 300%;
 	font-weight: 500;
+  letter-spacing: -1px;
+  line-height: 85%;
 }
 h2 {
 	font-size: 200%;
@@ -247,19 +251,26 @@ p {
 
 /* Background Colors */
 .bg-blue {
-	background-color: #42454e;
+	background-color: #2c3e50;
+  border-bottom: 15px solid rgba(0, 0, 0, 0.03);
 }
 .bg-white {
-	background-color: white;
+	background-color: #ffffff;
+  border-bottom: 15px solid rgba(0, 0, 0, 0.05);
 }
 .bg-gray {
-	background-color: #f0f0f0;
+	background-color: #ecf0f1;
+  border-bottom: 15px solid rgba(0, 0, 0, 0.05);
 }
 .bg-dark-gray {
-	background-color: #777777;
+	background-color: #dddddd;
 }
 .bg-green {
-  background-color: #26936c
+  background-color: rgb(48, 198, 81);
+  border-bottom: 15px solid rgba(0, 0, 0, 0.05);
+}
+.bg-light-green {
+  background-color: #41a444;
 }
 
 /* Vertical Alignment */
@@ -287,28 +298,65 @@ p {
 /* Other Elements */
 .outer-line-top {
 	width: 100%;
-	height: 5px;
+	height: 10px;
+}
+.outer-line-top-thin {
+  width: 100%;
+  height: 0px;
 }
 .outer-line-bottom {
 	width: 100%;
 	height: 0px;
 }
+.outer-line-bottom-thin {
+  width: 100%;
+  height: 0px;
+}
 .inner-line {
-	width: 50px;
+	width: 100%;
 	height: 5px;
-	background-color: #26936c;
+	background-color: #2c3e50;
+  border-bottom: 2.5px solid rgba(0, 0, 0, 0.2);
 	vertical-align: middle;
 	display: table;
 	margin: 0;
 }
+.inner-line-green {
+  width: 100%;
+  height: 5px;
+  background-color: rgb(48, 198, 81);
+  border-bottom: 2.5px solid rgba(0, 0, 0, 0.2);
+  vertical-align: middle;
+  display: table;
+  margin: 0;
+}
+.inner-line-big {
+  width: 100%;
+  height: 15px;
+  background-color: rgb(48, 198, 81);
+  border-bottom: 7.5px solid rgba(0, 0, 0, 0.1);
+  vertical-align: middle;
+  display: table;
+  margin: 0;
+}
 .inner-line-blue {
-	width: 50px;
+	width: 100%;
 	height: 5px;
-	background-color: #42454e;
+	background-color: #2c3e50;
+  border-bottom: 2.5px solid rgba(0, 0, 0, 0.2);
 	vertical-align: middle;
 	display: table;
 	margin: 0 auto;
   float: left;
+}
+.inner-line-white {
+  width: 100%;
+  height: 5px;
+  background-color: #ffffff;
+  border-bottom: 2.5px solid rgba(0, 0, 0, 0.2);
+  vertical-align: middle;
+  display: table;
+  margin: 0;
 }
 .outer-small-line-top {
 	width: 100%;
@@ -381,16 +429,20 @@ textarea.form-control {
 
 /* Responsive Images */
 .img-responsive {
-	padding: 35px 0px 0px 0px;
+	padding: 0px 0px 0px 0px;
+  box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.05)
 }
 .img-circle {
-	border-radius: 2px;
-	padding: 5px 5px 25px 5px;
+-webkit-border-radius: 50%;
+-moz-border-radius: 50%;
+border-radius: 50%;
 }
-
 /* Special Spacing */
 .padded-bottom {
 	padding-bottom: 15px;
+}
+.padded-bottom-100 {
+  padding-bottom: 100px;
 }
 .padded-top {
 	padding-top: 15px;
@@ -400,9 +452,6 @@ textarea.form-control {
 }
 .padded-bottom-35 {
   padding-bottom: 35px;
-}
-.pad-box {
-  padding-left: 200px;
 }
 
 /* Special Button */
@@ -428,8 +477,8 @@ textarea.form-control {
           user-select: none;
 }
 .btn-green {
-	color: #26936c;
-	border-color: #26936c;
+	color: rgb(48, 198, 81);
+	border-color: rgb(48, 198, 81);
 	background-color: white;
 	-webkit-transition: all .2s ease;
 	-moz-transition: all .2s ease;
@@ -437,38 +486,71 @@ textarea.form-control {
 	-o-transitiona: all .2s ease;
 }
 .btn-green:hover {
-	background-color: #26936c;
+	background-color: rgb(48, 198, 81);
 	color: #ffffff;
 	text-shadow: none;
 }
 .btn-blue {
-  color: #42454e;
-  border-color: #42454e;
+  color: #2c3e50;
+  border-color: #2c3e50;
   background-color: white;
+  font-size: 125%;
+  -webkit-transition: all .2s ease;
+  -moz-transition: all .2s ease;
+  -ms-transition: all .2s ease;
+  -o-transitiona: all .2s ease;
+}
+.btn-blue-work {
+  color: #2c3e50;
+  border-color: #2c3e50;
+  background-color: transparent;
+  font-size: 125%;
+  -webkit-transition: all .2s ease;
+  -moz-transition: all .2s ease;
+  -ms-transition: all .2s ease;
+  -o-transitiona: all .2s ease;
+}
+.btn-green-resume {
+  color: rgb(48, 198, 81);
+  border-color: rgb(48, 198, 81);
+  background-color: transparent;
+  font-size: 125%;
+  -webkit-transition: all .2s ease;
+  -moz-transition: all .2s ease;
+  -ms-transition: all .2s ease;
+  -o-transitiona: all .2s ease;
+}
+.btn-green-work {
+  color: white;
+  border-color: white;
+  background-color: transparent;
+  font-size: 125%;
   -webkit-transition: all .2s ease;
   -moz-transition: all .2s ease;
   -ms-transition: all .2s ease;
   -o-transitiona: all .2s ease;
 }
 .btn-blue:hover {
-  background-color: #42454e;
+  background-color: #2c3e50;
   color: #ffffff;
   text-shadow: none;
 }
-.btn-blue-gray {
+.btn-blue-work:hover {
+  background-color: #2c3e50;
+  color: #ffffff;
+  text-shadow: none;
+}
+.btn-green-resume:hover {
+  background-color: rgb(48, 198, 81);
+  color: #ffffff;
+  text-shadow: none;
+}
+.btn-green-work:hover {
+  background-color: white;
   color: #42454e;
-  border-color: #42454e;
-  background-color: transparent;
-  -webkit-transition: all .2s ease;
-  -moz-transition: all .2s ease;
-  -ms-transition: all .2s ease;
-  -o-transitiona: all .2s ease;
-}
-.btn-blue-gray:hover {
-  background-color: #42454e;
-  color: #ffffff;
   text-shadow: none;
 }
+
 /* Media Queries */
 
 
@@ -602,10 +684,30 @@ a:hover {
   height: 100%; 
 }
 .title {
-  font-size: 400%;
+  font-size: 1000%;
+  width: 100%;
+  overflow: hidden;
+  overflow-y: hidden;
 }
 @media (max-width: 767px) {
   .title {
-    font-size: 350%;
+    font-size: 1000%;
+    transform:rotate(-20deg);
+    -ms-transform:rotate(-20deg); /* IE 9 */
+    -webkit-transform:rotate(-20deg); /* Safari and Chrome */
+    width: 100%;
+    overflow: hidden;
   }
+}
+body {
+  width: 100%;
+  overflow-x: hidden;
+}
+html {
+  width: 100%;
+  overflow-x: hidden;
+}
+.headline {
+  font-weight: 700;
+  font-size: 300%;
 }
