--- a/css/brandonkwilliams.css
+++ b/css/brandonkwilliams.css
@@ -437,6 +437,8 @@ textarea.form-control {
 -moz-border-radius: 50%;
 border-radius: 50%;
 box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.05);
+background-color: white;
+padding: 5px 5px;
 }
 /* Special Spacing */
 .padded-bottom {
