--- a/css/form.css
+++ b/css/form.css
@@ -198,7 +198,7 @@ form li div label .currently {
 input.text, input.search, input.file, textarea.textarea, select.select {
     font-family: inherit;
     font-size: 100%;
-    color: #42454e;
+    color: #2a2a2a;
     margin: 0;
     padding: 2px 2px;
     border: 2px solid rgb(220, 220, 220);
@@ -209,11 +209,11 @@ input.text, input.search, input.file, textarea.textarea, select.select {
             transition: border-color ease-in-out .25s, box-shadow ease-in-out 0.15s;
 }
 input.text:focus, input.search:focus, textarea.textarea:focus{
-  border-color: #42454e;
+  border-color: #333333;
   outline: 0;
   -webkit-box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075), 0 0 0px rgba(102, 175, 233, 0.6);
           box-shadow: inset 0 0px 0px rgba(0, 0, 0, 0.075), 0 0 0px rgba(102, 175, 233, 0.6);
-  color: #42454e;
+  color: #2a2a2a;
 }
 input.nospin::-webkit-inner-spin-button, input.nospin::-webkit-outer-spin-button {
     -webkit-appearance: none;
